--- a/gb/9/2/9/n2422991.md
+++ b/gb/9/2/9/n2422991.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5773.md#1">贪腐淫乱 | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/mprjd2205/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mprjd2205/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/osnkrv285/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/osnkrv285/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>高智晟：黑夜、黑头套、黑帮绑架</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2009/02/902090118221508-376x400.jpg" />
+<img width="600" src="http://i.epochtimes.com/assets/uploads/2009/02/902090118221508-376x400.jpg" />
 <h6>高智晟律师 （大纪元）
 </h6>
 <hr>
 <p>【大纪元2月9日讯】我费尽周章终会面世的文字，将撕去今日中国许多东西的人相，露出“执政者”那超乎常人想像的心肠本色。当然，这些文字亦势将给今天共产党在全世界的那些“好朋友”、“好伙伴”带来些许不快、甚而至于难为情——这些“好朋友”、“好伙伴”们内心对道德及人类良知价值还存有些敬畏的话。</p>
 <p>今天，暴富起来的共产党，不仅在全球有了越来越多的“好朋友”、“好伙伴”；而且把“中国是一个法治国家”这种颠倒黑白的口号喊得气壮如牛。对中华民族人权进步事业而言，这两者无一不是灾难性的。</p>
 <p>2007年9月21日夜20点左右，当局口头通知说让我去接受例行的改造思想谈话。行在路上，我发现较往常比有了些异样，平时贴身跟踪的秘密警察们拉开了较远的距离。行至一拐角处时，迎面扑来六、七名陌生人。我的背后脖胫处被猛然一击，眼前感到整个地面飞速向我砸来，但我并未昏迷。接下来，感到有人揪起我的头发，迅速套上了黑头套，被架上了一辆凭感觉是两侧面对面置有座椅而中间无椅的车上。我被压迫趴在中间，右侧脸着地，感到有一只大皮鞋猛然踩压在我的脸上。多只手开始在我身上忙碌，由于他们对我一家的绑架频繁，故而照例在我身上未搜得对他们有价值的东西。但我感觉到了此次与以往绑架的不同。绑架者抽下了我的皮带将我反绑，我趴在车中间，估计著有不低于四个人的脚踏在我的身上。大约四十分钟左右，我被拖下了车站立着，裤子已掉至脚脖上的我被推搡着进了一间房屋，此前一直没有任何说话的声音。</p>
-<p>我的头套猛然间被人扯下，眼前一亮的同时，辱骂和击打开始了。“<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E9%AB%98%E6%99%BA%E6%99%9F.md">高智晟</a>，我操你妈的，你丫的今天死期到啦，哥几个，先给丫的来点狠的，往死里揍丫的”，一个头目咬呀切齿吼叫道。这时，四个人手执电警棍在我头上、身上猛力击打，房间里只剩下击打声和紧张的喘气声。我被打得趴在地上，浑身抖动不止。</p>
-<p>“别他妈让丫的歇了”，王姓头目吼道（后来得知之姓王）。这时，一名个头一米九以上的大汉抓住头发将我揪起，王姓头目扑过来疯狂抽打我的脸部，“操你妈，<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E9%AB%98%E6%99%BA%E6%99%9F.md">高智晟</a>，你丫的也配他妈穿一身黑衣服，你丫是老大呀，给丫的扒了”。我迅速被撕的一丝不剩。“让丫的跪下”，随着王姓头目的一声吼叫，后小腿被人猛击两下，我被打扑跪在地上。大个子继续揪住我的头发迫逼我抬头看着他们的头目。这时，我看到房子里一共有五人，四人手持电警棍，一人手持我的腰带。</p>
+<p>我的头套猛然间被人扯下，眼前一亮的同时，辱骂和击打开始了。“<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E9%AB%98%E6%99%BA%E6%99%9F.md">高智晟</a>，我操你妈的，你丫的今天死期到啦，哥几个，先给丫的来点狠的，往死里揍丫的”，一个头目咬呀切齿吼叫道。这时，四个人手执电警棍在我头上、身上猛力击打，房间里只剩下击打声和紧张的喘气声。我被打得趴在地上，浑身抖动不止。</p>
+<p>“别他妈让丫的歇了”，王姓头目吼道（后来得知之姓王）。这时，一名个头一米九以上的大汉抓住头发将我揪起，王姓头目扑过来疯狂抽打我的脸部，“操你妈，<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E9%AB%98%E6%99%BA%E6%99%9F.md">高智晟</a>，你丫的也配他妈穿一身黑衣服，你丫是老大呀，给丫的扒了”。我迅速被撕的一丝不剩。“让丫的跪下”，随着王姓头目的一声吼叫，后小腿被人猛击两下，我被打扑跪在地上。大个子继续揪住我的头发迫逼我抬头看着他们的头目。这时，我看到房子里一共有五人，四人手持电警棍，一人手持我的腰带。</p>
 <p>“你丫的听着，今天几位大爷不要别的，就要你生不如死，高智晟我也实话告诉你，现在已不再是你和政府之间的事啦，现在他妈的已经完全变成个人之间的事啦，你丫的低头看一看，现在地上可一滴水都没有，呆会地上的水就会没脚脖，你他妈一会就会明白这水从那里来”。王姓头目在说这些话的时候开始电击我的脸部和上身。“来，给他丫的上第二道菜”，王头目话落，四支电警棍开始电击我，我感到所击之处，五脏六腑、浑身肌肉像自顾躲避似的在皮下急速跳躲。我痛苦的满地打滚，当王姓头目开始电击我的生殖器时，我向他求饶过。我的求饶换来的是一片大笑和更加疯狂的折磨。王姓头目四次电击我的生殖器，一边电击，一边狂叫不止。数小时后，我不再有求饶的力量，也不再有力量躲避，但我的头脑异常的清醒。我感到在电击时我的身体抖动的非常剧烈，清楚地感到抖动的四肢溅起的水花。这是我在几小时里流出的汗水，我这时才明白“呆会地上的水就会没脚脖”之意。</p>
 <p>这种深更半夜折磨人的活计对折磨者似乎也不轻松。天快亮时，他们有三人离开房间。“给丫的上下一道菜，呆会来换你们哥俩”。王姓头目示意留下的俩人将一把椅子搬至房中间，将我架起来坐在上面，这时，其中一人嘴里叼上了五支烟，用火点着后猛吸几口，另一人站在后面用力抓住我的头发，压迫我低下了头，另一人开始用那五支烟熏我的鼻子和眼晴，这样反复多次。他们做的很认真，也很有耐心。待到后来，我除了能偶然感到泪水流下来滴在大腿上的感觉外，已完全不再在乎眼前这俩个人的忙碌和我有什么联系。过了约两小时左右，进来两人换下辛苦用烟熏我的那俩位。我的眼睛肿胀得什么也看不清。</p>
 <p>新进来者开口说话了：“高智晟，耳朵现在还能听到吧？算你点背，这帮人都是长年打黑除恶的，出手狠着呢。这是这次上面专门精心给你挑选的，我是谁你听出来了没有？我姓江（音），你去年刚出来时跟你去过新疆”。“是山东蓬莱的那位吗？”我说。“对，你记忆不错，我说过，你早晚还要进来，上次去新疆我看你那个样子，我就知道你再次进来是早晚的事，你看你在警察跟前目空一切的德性，不让你再进来长点记性能行吗？给美国国会写信，你看你那一付汉奸德性，美国主子能给你什么？美国国会算个屌。这是在中国，这是共产党的天下，你算个屁，要你的命还不像踩死只蚂蚁一样？不明白这点还出来混，你要敢再写那些狗屁文章，政府就得表明个态度，这一晚上你该明白了吧？”江不紧不慢地说。</p>
@@ -116,7 +116,7 @@
 <hr>
 
 #### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/9/2/9/n2422991.htm">高智晟：黑夜、黑头套、黑帮绑架</a>
+> 原文：<a href="http://www.epochtimes.com/gb\9\2\9\n2422991.htm">高智晟：黑夜、黑头套、黑帮绑架</a>
 
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
@@ -132,25 +132,25 @@
 > <li><a href="http://www.epochtimes.com/gb/9/1/25/n2408968.htm">高智晟：神与我们并肩作战(7)</a></li>
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636278.htm">【翻墙必看】分析：四中全会公报或泄大秘密</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638219.htm">林郑被习韩摆上台 香港步入黑暗时期</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11637891.htm">加前大使：中共猪肉战储已耗尽 疫情超严重</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638276.htm">河南一婚宴 猪肘子刚上桌就被“秒杀”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/11/n11582046.htm">唐代使者漂流到巨人国</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11612042.htm">【才子佳人】梁祝的故事 我们读懂了吗？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11625562.htm">【才子佳人】借汉人身份嫁乾隆曾孙的满清才女</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/28/n11617434.htm">【历史回眸】远离中共 在港建中文大学的钱穆</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635571.htm">北京花巨资换马克龙参加进博会 却遭当面批评</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11633778.htm">传任学锋京西宾馆跳楼 四中全会罕见换地点</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635931.htm">王小洪任中共新设机构特勤局局长 引猜测</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635378.htm">【新闻看点】习近平进博会大讲开放 引质疑</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11637799.htm">【新闻看点】林郑见习韩 中联办港澳办被冷落</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11637817.htm">【十字路口】中共超限战袭香港 26条统战侵台</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11631219.htm">遗传李靓蕾天赋 王力宏3岁女儿展画功</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11632910.htm">叶蕴仪在乌克兰独立广场发声：心与香港相联</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638183.htm">杜汶泽舌战陈百祥后呼吁：集中精神做对的事</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635562.htm">晒头发遮眼加口罩生活照 容祖儿疑遭大陆封杀</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635898.htm">章子怡试镜日本艺伎 曾因仅说四个字惨遭淘汰</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744649.htm">英预言家：2020年中国发生革命 川普连任</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11743919.htm">【翻墙必看】盘点2019中共搞砸的大事件</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743757.htm">大陆大中院校禁过圣诞节 民众如是说</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744554.htm">袜子里藏生物样本回国 中国男美国机场被捕</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733387.htm">占星解析薄熙来死亡消息是否属实</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725356.htm">为什么说“吃过冬至汤圆长一岁”？</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733028.htm">以世运占星学解析中共政权的出生盘</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721189.htm">天上人间冬至日  传统节俗暖人心</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743273.htm">中国多地禁过圣诞 藉历史宣传“仇恨”</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741624.htm">【翻墙必看】北大教授：七常委先公示财产</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741030.htm">大陆课外培训机构倒闭潮 今年1.2万家关停</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11743804.htm">【拍案惊奇】不平夜全港乱战 传2人坠楼警在场</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743683.htm">【热点互动】美国防法案 暗制中共 明挺台湾</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743455.htm">【新闻看点】蔡英文一年大翻盘 北京功劳不小</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11739135.htm">高圆圆冬至晒照问吃啥 贾静雯晒满桌美食回应</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739406.htm">岚摘公信榜年销量冠军 TWICE与BTS入Top5</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744287.htm">侯佩岑婚后8年首晒全家福 温馨庆圣诞</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740019.htm">崔智友对怀孕心怀感恩 明年5月为人母</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743740.htm">高圆圆女儿受宠爱 赵又廷父母为孙女制圣诞礼</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mprjd2205/djy/blob/master/gb/9/2/9/n2422991.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/osnkrv285/djy/blob/master/gb/9/2/9/n2422991.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/osnkrv285/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/osnkrv285/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
